--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   progressive_image: ^2.0.1
   mobile_scanner: ^7.0.1
+  flutter_html: ^3.0.0
 
 
 dev_dependencies:
